# solve_arrow_puzzle

./: Cargo.toml  arrow_to_color.json  config.json  cspell.json  dimensions.json  lut.txt  tapper_config.json
references/: measurements.afdesign  onscreen.afdesign
scripts/: mirror.sh  run.sh
src/: android.rs  app.rs  config.rs  device.rs  enumerate_2d.rs  expert.rs  gui.rs  hex.rs  lib.rs  lut.rs  main.rs  puzzle.rs  screen.rs  solve.rs  time.rs
