[package]
name = "solve_arrow_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
device_query = "1.1.2"
enigo = "0.1.0"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"
scrap = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
