[package]
name = "solve_arrow_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
device_query = "*"
enigo = "*"
flate2 = "*"
itertools = "*"
phf = { version = "*", features = ["macros"] }
proptest = "*"
rand = "*"
rayon = "*"
scrap = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
